# alacritty_open_terminal_extension

./: Cargo.toml  README.md
assets/: exemplo_dconf.mkv
src/: dconf_default_terminal.rs  lib.rs  open_terminal_menu_provider.rs  terminal_command.rs
